--- a/src/public/css/rdvList.css
+++ b/src/public/css/rdvList.css
@@ -1,34 +1,102 @@
+@import url('https://fonts.googleapis.com/css2?family=Ephesis&display=swap');
+
+body {
+    background-color: #fcefff;
+
+}
+
+h1 {
+    font-family: Ephesis, sans-serif;
+    font-size: 50px;
+}
+
+input[type=submit] {
+    cursor: pointer;
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+table {
+    /* supprimme l'espace entre les colonnes de tout le tableau*/
+
+    border-collapse: collapse;
+}
+
+/* Chaque tr pair */
+tr:nth-child(even) {
+    background-color: #e1a3e5;
+}
+
+/* Au survol d'une ligne du tableau*/
+tr:hover {
+    cursor: pointer;
+    background-color: #ea5cbf;
+}
+
+/* Sélectionne tous les th et td */
+th, td {
+    border: 1px solid rgb(255, 0, 219);
+}
+
+/* Sélectionne le dernier td de chaque ligne */
+th:nth-last-child(-n+1) {
+    border: none;
+}
+
+/*-------------------------------------------------*/
+
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 10;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* autorise le scroll si nécessaire */
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
-.modal-content {
+.modal-delete, .modal-update {
+    display: none;
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
+    margin: 15% auto;
+    padding: 10px;
     border: 1px solid #888;
-    width: 20%; /* Could be more or less, depending on screen size */
+    width: 20%;
+}
+.modal-update {
+    width: 30%;
 }
 
-.close {
+label {
+    display: block;
+    position: relative;
+    padding: 3px 0;
+    left: 0;
+    width: 80%;
+    text-align: right;
+}
+
+p {
+    text-align: center;
+}
+
+.closeSpan {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.closeSpan:hover, .closeSpan:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
+    /* modifie le curseur lors du survol du bouton de fermeture de la modale*/
+}
+
+#divButton {
+    text-align: center;
+    z-index: 0;
 }
